# Bolla_Ciliegie_React

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test_ddt.html  vite.config.js
.claude/: settings.local.json
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: tauriCommands.js
src/components/: BollaForm.jsx  BolleList.jsx  Clienti.jsx  ConfirmDialog.jsx  Costi.jsx  Dashboard.jsx  Dipendenti.jsx  Giornale.jsx  ImpostazioniBolla.jsx  Navbar.jsx  PdfSettingsPanel.jsx  PriceModal.jsx  Report.jsx
src/utils/: formatters.js  generateDDT.js
