[package]
name = "bolla-ciliegie"
version = "0.1.0"
description = "BollaCiliegie — Gestionale raccolta ciliegie"
authors = ["BollaCiliegie"]
edition = "2021"

[lib]
name = "bolla_ciliegie_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri     = { version = "2", features = [] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite  = { version = "0.32", features = ["bundled"] }
chrono    = { version = "0.4", features = ["serde"] }
